--- a/src/randomizer/Cargo.toml
+++ b/src/randomizer/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "casino"
+name = "randomizer"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-randomizer = {path = "./src/randomizer"}
+rand = "0.8.5"
